# Bambu-Panel

./: .gitignore  README.md
assets/screenshots/: README.md
assets/ui/: README.md
docs/design/: p1s-esp32-control-screen-ui.md  software-system-architecture.md
docs/design/mockups/: bambu-panel-interactive-prototype.html  bambu-panel-ui-board.html
docs/hardware/: README.md  esp32-s3-hx8369-gt911.md
docs/protocol/: README.md
docs/superpowers/plans/: 2026-05-25-lvgl-home-page.md
firmware/esp32/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/esp32/components/bambu_lvgl_port/: CMakeLists.txt  bambu_lvgl_port.c
firmware/esp32/components/bambu_lvgl_ui/: CMakeLists.txt  bambu_lvgl_control_model.c  bambu_lvgl_page_model.c  bambu_lvgl_ui.c
firmware/esp32/components/board_support/: CMakeLists.txt  board_profile.c  display_driver.c  display_profile.c  touch_driver.c
firmware/esp32/components/lvgl/: CMakeLists.txt  lv_conf.h
firmware/esp32/components/lvgl/src/: lv_conf_internal.h
firmware/esp32/components/lvgl/src/core/: lv_obj.c
firmware/esp32/components/lvgl/src/hal/: lv_hal_disp.h
firmware/esp32/components/panel_hw/: CMakeLists.txt  bambu_panel_hw.c
firmware/esp32/components/panel_ui/: CMakeLists.txt  bambu_panel_ui_render.c  bambu_panel_ui_scene.c
firmware/esp32/main/: CMakeLists.txt  app_main.c
tests/bambu_lvgl_ui/: test_control_model.c  test_page_model.c
tests/board_support/: test_driver_configs.c  test_profiles.c
tests/panel_ui/: test_home_scene.c
tools/: README.md  test-board-profiles.sh
(+13 files in other folders)
